adding footer, modal and fixing header

--- a/src/components/card/card.style.css
+++ b/src/components/card/card.style.css
@@ -3,6 +3,13 @@
   height: auto;
 }
 
+@media (max-width: 579px) {
+  .picture {
+    width: 64px;
+    height: auto;
+  }
+}
+
 .card {
   width: 160px;
   height: 160px;
@@ -30,6 +37,9 @@
   .card {
     width: 120px;
     height: 120px;
+  }
+  .card div {
+    font-size: 0.9rem;
   }
 }
 /*# sourceMappingURL=card.style.css.map */
