--- a/src/components/cardlist/cardlist.style.css
+++ b/src/components/cardlist/cardlist.style.css
@@ -6,11 +6,23 @@
       flex-wrap: wrap;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  margin: 50px 0;
+  margin: 2rem 4rem;
   padding: 15px;
   min-height: 70vh;
   border: 1px solid lightgrey;
   border-radius: 10px;
   background: white;
+}
+
+@media (max-width: 767px) {
+  .cardlist {
+    margin: 2rem;
+  }
+}
+
+@media (max-width: 579px) {
+  .cardlist {
+    margin: 2rem 1rem;
+  }
 }
 /*# sourceMappingURL=cardlist.style.css.map */
