--- a/src/components/modal/modal.style.css
+++ b/src/components/modal/modal.style.css
@@ -22,8 +22,7 @@
   border: 3px solid #888;
   border-radius: 20px;
   width: 700px;
-  background: -webkit-gradient(linear, left top, right top, from(#efefef), color-stop(50%, #dbdbdb), to(#efefef));
-  background: linear-gradient(to right, #efefef 0%, #dbdbdb 50%, #efefef 100%);
+  background-color: white;
 }
 
 .modal-load {
@@ -100,13 +99,16 @@
   -ms-grid-row: 1;
   -ms-grid-row-span: 6;
   grid-row: 1 / span 6;
-  width: 100%;
+  width: 80%;
   height: auto;
-  border: 4px solid goldenrod;
+  border: 4px solid #f7f793;
+  border-radius: 50%;
+  padding: 1rem;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  background-color: #9EEBCF;
 }
 
 .char-name {
@@ -131,23 +133,10 @@
   padding: 20px 0;
 }
 
-/*** Handles Modal settings when screen width decreases to less than 735px */
-@media only screen and (max-width: 735px) {
+/*** Handles Modal settings when screen width decreases to less than 767px */
+@media only screen and (max-width: 767px) {
   .modal-content, .modal-load {
-    width: 80vw;
-    margin: 2vh auto;
-  }
-  .stats {
-    -ms-grid-column-align: start;
-        justify-self: start;
-    font-size: 2.8vw;
-  }
-}
-
-/*** Handles Modal settings when screen width decreases to less than 516px */
-@media only screen and (max-width: 516px) {
-  .modal-content, .modal-load {
-    width: 60vh;
+    width: 70%;
     height: auto;
     margin: 5vh auto;
   }
