touching up app / adding read.me / build

--- a/src/components/header/header.style.css
+++ b/src/components/header/header.style.css
@@ -9,19 +9,24 @@
 
 .cover-container p {
   font-family: Pokemon;
-  font-size: 2rem;
-  color: #3860aa;
+  font-size: 6vh;
+  color: #ef4036;
+}
+
+@media (max-width: 576px) {
+  .cover-container p {
+    font-size: 4vh;
+  }
 }
 
 .cover-image {
-  max-width: 120vh;
-  width: 100%;
+  max-width: 50vh;
   height: auto;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 576px) {
   .cover-image {
-    max-width: 100vh;
+    max-width: 40vh;
   }
 }
 /*# sourceMappingURL=header.style.css.map */
