--- a/src/pages/App/App.scss
+++ b/src/pages/App/App.scss
@@ -21,7 +21,7 @@
     font-size: 12vh;
     padding: 25vh 12vh;
     font-family: Pokemon;
-    color: #3860aa;
+    color: #ef4036;
   }
   
   /*SETS FADE IN & FADE OUT ANIMATION - EXTRACTED FROM THE WEB*/
